// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering pristine horizontalConstraint with constraint should match snapshot 1`] = `
<TextInput
  horizontalConstraint="s"
  onChange={[Function]}
  value=""
/>
`;

exports[`rendering pristine horizontalConstraint without constraint should match snapshot 1`] = `
<TextInput
  horizontalConstraint="scale"
  onChange={[Function]}
  value=""
/>
`;
